# punsctl

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mise.toml  punsctl.py  pyproject.toml
.github/workflows/: branch.yaml  pr.yaml  release.yaml
libpunsctl/: namespace.py  rootspace.py  sgetopt.py
punsctl/: __init__.py  __main__.py  exceptions.py  main.py  namespace.py  rootspace.py  sgetopt.py  static.py  utils.py
tests/: conftest.py  test_list_namespaces.py  test_multiple_namespaces.py  test_namespace.py  test_namespace_exceptions.py  test_rootspace.py  test_single_namespace.py
tests/fixtures/: rootspace.py
