[tool.poetry]
name = "punsctl"
version = "0.2.0"
description = "POSIX User's Namespace Control"
authors = ["Aleksandar Buza <me@aleksandarbuza.com>"]
license = "ISC"
readme = "README.md"
homepage = "https://github.com/alekbuza/punsctl"
repository = "https://github.com/alekbuza/punsctl"
keywords = ["posix", "user", "namespace"]
classifiers = [
    "Environment :: Console",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux"
]
include = [
    "LICENSE",
]

[tool.poetry.scripts]
punsctl = "punsctl.main:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pygount = "^1.4.0"
bandit = "^1.7.4"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
